--- a/settings.json
+++ b/settings.json
@@ -1,14 +1,14 @@
 {
   "database": {
-    "user": "x",
-    "password": "x",
-    "host": "x",
-    "database": "x",
+    "user": "postgres",
+    "password": "viclin123",
+    "host": "localhost",
+    "database": "smarthome",
     "port": 5432
   },
   "scheduler": {
-    "priceTimepattern": "*/1 * * * *",
-    "weatherTimepattern": "*/1 * * * *"
+    "priceTimepattern": "1 14 * * *",
+    "weatherTimepattern": "1 * * * *"
   },
   "lastFetchedPriceDate": "16/01/2024"
 }
